# techcontinuum-lead-radar

./: .env.example  .gitignore  Makefile  README.md  claude.md  pyproject.toml
config/: evidence_keywords.yaml  exclusions.yaml  icp.yaml  providers.yaml  scoring.yaml  signal_taxonomy.yaml  title_taxonomy.yaml  url_patterns.yaml
docs/: architecture.md  evidence-policy.md  future-roadmap.md  human-review.md  scoring-model.md  spec.md  vibe-credit-strategy.md
scripts/: seed_demo_data.py
src/lead_radar/: cli.py  db.py  settings.py
src/lead_radar/discovery/: __init__.py  evidence_pipeline.py  hard_gates.py  ingest.py  pipeline.py
src/lead_radar/models/: __init__.py  account.py  contact.py  enums.py  evidence.py  offer.py  provider_usage.py  research.py  review.py  scoring.py
src/lead_radar/providers/: __init__.py  base.py  country_codes.py  credit_control.py  csv_provider.py  demo_fixtures.py  manual_url_provider.py  mock.py  mock_web_provider.py  pattern_guess_provider.py  vibe_accounts.py  (+4 more)
templates/: run_summary.md.j2
tests/: conftest.py  test_cli.py  test_contact_guardrails.py  test_country_codes.py  test_credit_limits.py  test_csv_provider.py  test_deduplication.py  test_evidence_extraction.py  test_evidence_requirements.py  test_fetch_governor.py  test_hard_gates.py  test_manual_url_provider.py  test_mock_web_provider.py  test_pattern_guess_provider.py  test_pipeline.py  test_recency.py  test_research_pipeline.py  test_review_queue_csv.py  test_scoring.py  test_vibe_accounts.py  test_vibe_cost_heuristic.py  test_vibe_provider.py  test_vpai_runner.py
(+21 files in other folders)
